--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,17 +3,16 @@
 /* Reset de estilos padrão, feito através de arquivo "reset.css" */
 
 body {
-  font-family: Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   background-color: #333;
-  padding: 3em;
-  height: 84vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 #calc {
-  width: 400px;
+  width: 330px;
   padding: .5em;
   background-color: #c4c4c4;
   color: #000;
@@ -23,7 +22,6 @@ body {
 
 #calc h3 {
   font-size: 1.3em;
-  font-weight: 300;
   color: #666;
 }
 
@@ -32,17 +30,18 @@ body {
 }
 
 #previous-operation {
-  color: #777;
-  padding: .2em;
+  color: #666;
   overflow-wrap: break-word;
   min-height: 1.6em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #current-operation {
   min-height: 1.6em;
   font-size: 3em;
-  font-weight: 700;
-  padding: .2em;
+  font-weight: bold;
   overflow-wrap: break-word;
 }
 
@@ -53,17 +52,17 @@ body {
 }
 
 #buttons-container button {
+  border: none;
   border: 1px solid transparent;
-  border-radius: 0;
-  height: 4em;
+  height: 3.4em;
   font-size: 1.2em;
   background-color: #dbdbdb;
-  cursor: pointer;
 }
 
 #buttons-container button:hover {
   background-color: #bababa;
   border-color: #999;
+  cursor: pointer;
 }
 
 #buttons-container .number {
